# ASLWordGenerator

./: .gitignore  README.md  holistic-cam.py  main.py  mediapipe-holistic-output.ipynb  pyproject.toml
