[project]
name = "aslwordgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "mediapipe>=0.10.21",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "tensorflow>=2.18.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
